8.10.2/MAE/General/rule.md
# 共通規則

* ## Web支援版本

      8.9.2

* ## APP 支援版本

      008.009.000.001 以上(含)

* __共通規則__
  * __標題__
    * 顯示標題
      * 有
        * [文字方塊](../Component/text.md)
        * [多行文字](../Component/mulitText.md)
        * [下拉選項](../Component/dropList.md)
        * [清單選項](../Component/list.md)
        * [按鈕群組](../Component/radioGroup.md)
        * [按鈕選項](../Component/radioButton.md)
        * [核取方塊](../Component/checkedBox.md)
        * [圖片](../Component/image.md)
        * [畫布](../Component/canvas.md)
        * [嵌入物件](../Component/embed.md)
      * 無
        * [標題](../Component/label.md)
        * [容器元件](../Component/container.md)
        * [框線](../Component/border.md)
        * [功能按鈕](../Component/button.md)
    * 位置
      * 上
      * 下
      * 左
      * 右
    * 標題寬度(%)
      * 當位置＝左/右時有效
      * 當位置＝上/下時同元件寬度
    * 標題高度(px)
      * 當位置＝上/下時有效
      * 當位置＝左/右時同元件高度
    * 版面
    * 樣式變化
      * 元件＝固定高度，標題超出顯示
      * 元件＝變動高度，標題超出折行
  * __超出折行__
    * 標題區
      * 折行規則
        * 單字折行
    * 內容區
      * 折行規則
        * 單字折行(Trac #7476)
          * 文字方塊
          * 下拉選項
        * 單字折行(內容超出折行，Enter也折行)
          * 多行文字
    * 單字折行
          但若整個單字的寬度大於可顯示寬度時，仍折行。ex. Important
  * __超出顯示__
        顯示 ...
  * __元件高度不足__
        當高度不足顯示內容時，內容只顯示部份。但若可以顯示內容的高度為0時，內容則不顯示出來
  * __受權限保護元件__
        1. 內容區會顯示(***)的字樣
        2. 無法駐留
  * __切版__
    * ROW/COL
          沒有分語系
    * ROW
          1. 寬度：100%
          2. 自訂樣式
    * COL
          1. 寬度：(%)有分語系
          2. 高度：因<內容>撐高
          3. 於不同語系時，元件可以出現在不同col上
    * 樣式
  * __寫入欄位值__
      <table>
          <thead>
              <tr>
                  <th>對應欄位</th>
                  <th colspan="2">範圍值</th>
              </tr>
          </thead>
          <tbody>
              <tr>
                  <td>01.Unicode字串(固定長度)</td>
                  <td rowspan="4"></td>
                  <td rowspan="4">無條件捨去</td>
              </tr>
              <tr>
                  <td>13.Unicode字串(可變長度)</td>
              </tr>
              <tr>
                  <td>14.字串(固定長度)</td>
              </tr>
              <tr>
                  <td>15.字串(可變長度)</td>
              </tr>
              <tr>
                  <td>04.int</td>
                  <td>-2^31 (-2,147,483,648) 到 2^31-1(2,147,483,647)</td>
                  <td rowspan="6">1. 會四捨五入至指定的欄位小數位<br>2. 檢查若值超出範圍時，會彈出BPS</td>
              </tr>
              <tr>
                  <td>05.smallint</td>
                  <td>-2^15 (-32,768) 到 2^15-1 (32,767)</td>
              </tr>
              <tr>
                  <td>06.tinyint</td>
                  <td>0 到 255</td>
              </tr>
              <tr>
                  <td>16.bigint</td>
                  <td>-9007199254740992 ~ 9007199254740992</td>
              </tr>
              <tr>
                  <td>07.數字</td>
                  <td>數字長度(不含小數點符號，負號)不可大於15</td>
              </tr>
              <tr>
                  <td>08.金額</td>
                  <td>數字長度(不含小數點符號，負號)不可大於15</td>
              </tr>
              <tr>
                  <td>18.bit</td>
                  <td></td>
                  <td>當為字串1，寫入true，否則寫入false<br>當為數字1，寫入true，否則寫入false</td>
              </tr>
          </tbody>
      </table>
  * __元件開單隱藏__
    * - [ ] 支援
    * - [x] 不支援
  * __元件隱藏__
    * 資料隱藏：DKS_編輯能力_資料隱藏(條件式)
            有設<對應欄位>才支援
      * 支援
        * [文字標題](..\Component\label.md)
        * [文字方塊](..\Component\text.md)
        * [多行文字](..\Component\mulitText.md)
        * [下拉選項](..\Component\dropList.md)
        * [清單選項](..\Component\list.md)
        * [按鈕選項](..\Component\radioButton.md)
        * [核取方塊](..\Component\checkedBox.md)
        * [圖片](..\Component\image.md)
        * [畫布](..\Component\canvas.md)
      * 不支援
        * [元件容器](../Component/container.md)
        * [嵌入物件](../Component/embed.md)
        * [按鈕群組](../Component/button.md)
    * 元件隱藏
          DKS_編輯能力_元件隱藏(條件式)/IDE_按鍵_執行限制(執行時機＝隱藏/顯示)
          隱藏會不佔位子：後面的元件會往上移
      * [文字標題](..\Component\label.md)
      * [文字方塊](..\Component\text.md)
      * [多行文字](..\Component\mulitText.md)
      * [下拉選項](..\Component\dropList.md)
      * [清單選項](..\Component\list.md)
      * [按鈕群組](..\Component\radioGroup.md)
      * [按鈕選項](..\Component\radioButton.md)
      * [核取方塊](..\Component\checkedBox.md)
      * [圖片](..\Component\image.md)
      * [元件容器](..\Component\container.md)
      * [畫布](..\Component\canvas.md)
      * [嵌入物件](..\Component\embed.md)
      * [功能按鈕](..\Component\button.md)
  * __元件駐留__
    * 支援
      * [文字方塊](..\Component\text.md)
      * [多行文字](..\Component\mulitText.md)
    * 流程
      1. 當原駐留元件<>此元件時，原駐留元件執行 unFocus 的動作
      2. 當點擊按鍵時，原駐留元件執行 unFocus 的動作
      3. 當原駐留元件有設定必要項且有異動資料=無資料時，原駐留元件顯示錯誤同時駐留在原駐留元件
      4. 駐留元件套用< onFocus >的效果 (目前僅支援顏色)
      5. 原駐留元件套用非< onFocus >的效果
  * __操作__
    * 點擊
          當點擊<內容區>時，駐留至該元件上(onFocus)。
  * __錯誤訊息顯示__
    * 錯誤訊息類型
      * 錯誤/警告
        * 顯示錯誤訊息位置：表單指定顯示錯誤訊息元件 > 指定元件(顯示在元件下方)
          * 表單指定顯示錯誤訊息元件
          * 指定元件(顯示在元件下方)
            * 支援的元件類型：除了在<元件容器>元件𥚃的子元件不支援外。其餘的元件皆支援
            * 類型
                  錯誤：樣式為紅色粗體
                  警告：樣式為橘色粗體
            * 清除的時機點
                  1. 再次顯示錯誤訊息時
                  2. 執行元件檢錯時
          * 彈出訊息盒
                錯誤：顯示紅色
                警告：顯示黃色
      * 詢問
            彈出詢問訊息盒
